--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,8 +12,7 @@ on:
       - 'v*'
 
 env:
-  NODE_ENV: production
-  USE_NODE_VER: '12.14.1'
+  NODE_VERSION: '14.16.0'
 
 # pipeline to execute
 jobs:
@@ -37,15 +36,15 @@ jobs:
             ${{ runner.os }}-modules-
       - uses: actions/setup-node@v2
         with:
-          node-version: ${{ env.USE_NODE_VER }}
+          node-version: ${{ env.NODE_VERSION }}
 
       # ┌┐ ┬ ┬┬┬  ┌┬┐
       # ├┴┐│ │││   ││
       # └─┘└─┘┴┴─┘─┴┘
       - name: install dependencies
-        run: npm i --prefer-offline --no-audit
+        run: npm ci --prefer-offline --no-audit
       - name: run production build
-        run: npm run build-prod
+        run: npm run build:prod
 
       # ┌┬┐┌─┐┌─┐┬┌─┌─┐┬─┐
       #  │││ ││  ├┴┐├┤ ├┬┘
