chore: tweak renovate (#359)
* chore: tweak renovate

* fix: regex :D

Co-authored-by: Jordan Brockopp <jordan.brockopp@target.com>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,4 +1,9 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["local>go-vela/renovate-config"]
+  "extends": ["local>go-vela/renovate-config"],
+  "packageRules": [
+    {
+      "excludePackageNames": ["nightly\\.\\d+$"]
+    }
+  ]
 }
