--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,6 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.local
-    container_name: ui
-    image: ui:local
     networks:
       - vela
     env_file:
@@ -31,8 +29,9 @@ services:
   #
   # https://go-vela.github.io/docs/concepts/infrastructure/server/
   server:
-    container_name: server
-    image: target/vela-server:latest
+    build:
+      context: ../server/
+      dockerfile: Dockerfile
     networks:
       - vela
     environment:
@@ -52,8 +51,8 @@ services:
       VELA_WEBUI_ADDR: 'http://localhost:8888'
       VELA_LOG_LEVEL: trace
       VELA_SECRET: 'zB7mrKDTZqNeNTD8z47yG4DHywspAh'
-      VELA_REFRESH_TOKEN_DURATION: 5m
-      VELA_ACCESS_TOKEN_DURATION: 1m
+      VELA_REFRESH_TOKEN_DURATION: 3h
+      VELA_ACCESS_TOKEN_DURATION: 10m
       VELA_DISABLE_WEBHOOK_VALIDATION: 'true'
       VELA_ENABLE_SECURE_COOKIE: 'false'
     env_file:
