--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "4.0.3",
-    "@parcel/transformer-elm": "2.0.0-beta.3.1",
+    "@parcel/transformer-elm": "2.0.0-rc.0",
     "@parcel/transformer-sass": "2.0.0-rc.0",
     "axe-core": "4.3.2",
     "cypress": "5.6.0",
