--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,7 @@ on:
 # pipeline to execute
 jobs:
   publish:
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-latest
     container:
       image: golang:1.15
     steps:
