enhance: use runtime flags for size limit, add tests

--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "copy:static": "make-dir ./dist && ncp ./src/static/images ./dist/images",
     "test": "elm-test",
     "test:watch": "elm-test --watch",
-    "test:cy": "start-test 8888 cypress",
-    "test:cy-open": "start-test 8888 cypress:open",
+    "test:cy": "VELA_LOG_BYTES_LIMIT=1000 start-test 8888 cypress",
+    "test:cy-open": "VELA_LOG_BYTES_LIMIT=1000 start-test 8888 cypress:open",
     "cypress": "cypress run",
     "cypress:open": "cypress open",
     "clean": "rimraf ./.parcel-cache ./.cache ./dist",
