add VELA_LOG_BYTES_LIMIT to env.example

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,11 @@
 # when running locally.
 VELA_API=http://localhost:8080
 
+# Vela log filesize limit in bytes.
+# This value configures the upper limit on log size that the UI will attempt to render.
+# The default is 200000 (2mb).
+# VELA_LOG_BYTES_LIMIT='2000000'
+
 ############################################################
 #  _______  _______  ______    __   __  _______  ______    #
 # |       ||       ||    _ |  |  | |  ||       ||    _ |   #
