--- a/.env.example
+++ b/.env.example
@@ -30,7 +30,7 @@ VELA_API=http://localhost:8080
 # Vela log filesize limit in bytes.
 # This value configures the upper limit on log size that the UI will attempt to render.
 # The default is 200000 (2mb).
-# VELA_LOG_BYTES_LIMIT='2000000'
+# VELA_LOG_BYTES_LIMIT=2000000
 
 ############################################################
 #  _______  _______  ______    __   __  _______  ______    #
