--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@fullhuman/postcss-purgecss": "4.0.3",
     "@parcel/transformer-elm": "2.0.0",
     "@parcel/transformer-sass": "2.0.0",
-    "autoprefixer": "^10.4.0",
+    "autoprefixer": "10.4.0",
     "axe-core": "4.3.5",
     "cypress": "5.6.0",
     "cypress-axe": "0.13.0",
