--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fullhuman/postcss-purgecss": "4.0.3",
     "@parcel/transformer-elm": "2.0.0",
     "@parcel/transformer-sass": "2.0.0",
+    "autoprefixer": "10.4.0",
     "axe-core": "4.3.5",
     "cypress": "5.6.0",
     "cypress-axe": "0.13.0",
@@ -20,19 +21,20 @@
     "make-dir-cli": "3.0.0",
     "ncp": "2.0.0",
     "parcel": "2.0.0",
+    "postcss": "8.3.11",
     "prettier": "2.4.1",
     "rimraf": "3.0.2",
     "start-server-and-test": "1.14.0",
-    "stylelint": "13.13.1",
+    "stylelint": "14.0.1",
     "stylelint-a11y": "1.2.3",
     "stylelint-color-format": "1.1.0",
     "stylelint-config-prettier": "9.0.3",
-    "stylelint-config-recommended-scss": "4.3.0",
+    "stylelint-config-recommended-scss": "5.0.0",
     "stylelint-declaration-block-no-ignored-properties": "2.4.0",
     "stylelint-declaration-strict-value": "1.7.12",
     "stylelint-high-performance-animation": "1.5.2",
-    "stylelint-order": "4.1.0",
-    "stylelint-scss": "3.21.0"
+    "stylelint-order": "5.0.0",
+    "stylelint-scss": "4.0.0"
   },
   "scripts": {
     "predev": "npm run clean",
