fix: local setup with server

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@
 # These are used by the ui service
 # defined in the docker compose stack
 
-# customize the location where you want users to provide feedack
+# customize the location where you want users to provide feedback
 #
 # default: https://github.com/go-vela/ui/issues/new
 # VELA_FEEDBACK_URL=
@@ -22,15 +22,10 @@
 # default: https://go-vela.github.io/docs
 # VELA_DOCS_URL=
 
-# Vela api server address, typically runs on port :8080 locally.
-# Should match the "VELA_ADDR" value in docker-compose.yml
-# when running locally.
+# customize the location for the Vela server address
+#
+# Should match the "VELA_ADDR" value in docker-compose.yml when running locally.
 VELA_API=http://localhost:8080
-
-# Vela log filesize limit in bytes.
-# This value configures the upper limit on log size that the UI will attempt to render.
-# The default is 200000 (2mb).
-# VELA_LOG_BYTES_LIMIT=2000000
 
 ############################################################
 #  _______  _______  ______    __   __  _______  ______    #
@@ -49,10 +44,10 @@ VELA_API=http://localhost:8080
 # github web url (only required if using GitHub Enterprise)
 #
 # default: https://github.com
-# VELA_SOURCE_ADDR=
+# VELA_SCM_ADDR=
 
 # github client id from oauth application
-VELA_SOURCE_CLIENT=
+VELA_SCM_CLIENT=
 
 # github client secret from oauth application
-VELA_SOURCE_SECRET=
+VELA_SCM_SECRET=
