--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "node": ">=14.17.0"
   },
   "dependencies": {
-    "clipboard": "2.0.8"
+    "clipboard": "2.0.8",
+    "d3": "^7.2.1",
+    "d3-dag": "^0.8.2",
+    "d3-tip": "^0.9.1"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "4.1.3",
