--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -5,8 +5,9 @@ RUN apk update && \
     rm -rf /var/cache/apk/*
 
 COPY dist /usr/share/nginx/html
-
 COPY nginx/local.conf /etc/nginx/conf.d/default.conf
+
+# COPY graphvizlib.wasm /usr/share/nginx/html/public/graphvizlib.wasm
 
 COPY docker-entrypoint.sh /usr/local/bin
 RUN ln -s /usr/local/bin/docker-entrypoint.sh /
