--- a/package.json
+++ b/package.json
@@ -7,16 +7,15 @@
     "node": ">=14.17.0"
   },
   "dependencies": {
+    "@hpcc-js/wasm": "^1.12.7",
     "clipboard": "2.0.8",
-    "d3": "7.2.1",
-    "d3-dag": "0.9.0",
-    "d3-tip": "^0.9.1"
+    "d3": "^7.3.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "4.1.3",
     "@parcel/transformer-elm": "2.0.1",
     "@parcel/transformer-sass": "2.0.1",
-    "autoprefixer": "10.4.0",
+    "autoprefixer": "10.4.2",
     "axe-core": "4.3.5",
     "cypress": "5.6.0",
     "cypress-axe": "0.13.0",
@@ -50,7 +49,7 @@
     "prebuild:prod": "npm run clean",
     "build:prod": "parcel build src/static/index.html --no-cache --detailed-report",
     "postbuild:prod": "npm run copy:static",
-    "copy:static": "make-dir ./dist && ncp ./src/static/images ./dist/images",
+    "copy:static": "make-dir ./dist && make-dir ./dist/public && ncp ./src/static/images ./dist/images && ncp ./src/static ./dist/public",
     "test": "elm-test",
     "test:watch": "elm-test --watch",
     "test:cy": "VELA_LOG_BYTES_LIMIT=1000 start-test 8888 cypress",
