--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "prebuild:prod": "npm run clean",
     "build:prod": "parcel build src/static/index.html --no-cache --detailed-report",
     "postbuild:prod": "npm run copy:static",
-    "copy:static": "make-dir ./dist && make-dir ./dist/public && ncp ./src/static/images ./dist/images && ncp ./src/static ./dist/public",
+    "copy:static": "make-dir ./dist && ncp ./src/static/images ./dist/images",
     "test": "elm-test",
     "test:watch": "elm-test --watch",
     "test:cy": "VELA_LOG_BYTES_LIMIT=1000 start-test 8888 cypress",
