--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,6 @@ on:
 
 env:
   NODE_VERSION: '16.13.2'
-  ELM_HOME: '${GITHUB_WORKSPACE}'
   CI: 1
 
 # pipeline to execute
@@ -27,6 +26,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        with:
+          path: ~/.elm
+          key: ${{ runner.os }}-elm-v2-${{ hashFiles('**/elm.json') }}
+          restore-keys: |
+            ${{ runner.os }}-elm-v2-
       - uses: actions/cache@v2
         with:
           path: ~/.npm
@@ -67,6 +72,12 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/cache@v2
         with:
+          path: ~/.elm
+          key: ${{ runner.os }}-elm-v2-${{ hashFiles('**/elm.json') }}
+          restore-keys: |
+            ${{ runner.os }}-elm-v2-
+      - uses: actions/cache@v2
+        with:
           path: ~/.npm
           key: ${{ runner.os }}-npm-v2-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
@@ -103,6 +114,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        with:
+          path: ~/.elm
+          key: ${{ runner.os }}-elm-v2-${{ hashFiles('**/elm.json') }}
+          restore-keys: |
+            ${{ runner.os }}-elm-v2-
       - uses: actions/cache@v2
         with:
           path: ~/.npm
@@ -144,6 +161,12 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/cache@v2
         with:
+          path: ~/.elm
+          key: ${{ runner.os }}-elm-v2-${{ hashFiles('**/elm.json') }}
+          restore-keys: |
+            ${{ runner.os }}-elm-v2-
+      - uses: actions/cache@v2
+        with:
           path: ~/.npm
           key: ${{ runner.os }}-npm-v2-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
@@ -180,6 +203,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        with:
+          path: ~/.elm
+          key: ${{ runner.os }}-elm-v2-${{ hashFiles('**/elm.json') }}
+          restore-keys: |
+            ${{ runner.os }}-elm-v2-
       - uses: actions/cache@v2
         with:
           path: ~/.npm
