--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,6 +98,8 @@ jobs:
         run: npm i elm-test@0.19.1-revision6
       - name: run elm-test
         run: npm run test
+      - name: show elm cache
+        run: ls -la ~/.elm/0.19.1/packages
 
   # ┬  ┬┌┐┌┌┬┐
   # │  ││││ │
@@ -179,6 +181,8 @@ jobs:
         run: npm ci --prefer-offline --no-audit
       - name: run cypress tests
         run: npm run test:cy
+      - name: show elm cache
+        run: ls -la ~/.elm/0.19.1/packages
 
   # ┌─┐┬ ┬┌┐ ┬  ┬┌─┐┬ ┬
   # ├─┘│ │├┴┐│  │└─┐├─┤
