chore(ci): fix elm caching (#509)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,12 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/cache@v2
         with:
+          path: ~/.elm
+          key: ${{ runner.os }}-elm-v3-${{ hashFiles('**/elm.json') }}
+          restore-keys: |
+            ${{ runner.os }}-elm-v3-
+      - uses: actions/cache@v2
+        with:
           path: ~/.npm
           key: ${{ runner.os }}-npm-v2-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
