refactor: docs for local setup

--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,7 @@
 #                #
 ##################
 
-# These are used by the ui service
-# defined in the docker compose stack
+# These are used by the ui service defined in the docker compose stack
 
 # customize the location for the Vela server address
 #
@@ -48,8 +47,7 @@ VELA_API=http://localhost:8080
 #                                                          #
 ############################################################
 
-# These are used by the server service
-# defined in the docker compose stack
+# These are used by the server service defined in the docker compose stack
 
 # github web url (only required if using GitHub Enterprise)
 #
@@ -57,7 +55,7 @@ VELA_API=http://localhost:8080
 # VELA_SCM_ADDR=
 
 # github client id from oauth application
-VELA_SCM_CLIENT=
+# VELA_SCM_CLIENT=
 
 # github client secret from oauth application
-VELA_SCM_SECRET=
+# VELA_SCM_SECRET=
