--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,55 +3,60 @@
 # Use of this source code is governed by the LICENSE file in this repository.
 
 # name of the action
-name: publish
+name: release
 
 # trigger on push events with `v*` in tag
-# ignore push events with `v*-rc*` in tag
 on:
   push:
     tags:
       - 'v*'
-      - '!v*-rc*'
 
 # pipeline to execute
 jobs:
-  publish:
+  release:
+    name: release tagged image
     runs-on: ubuntu-latest
-    container:
-      image: golang:1.15
+
     steps:
-      - name: clone
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+      - uses: actions/cache@v2
+        with:
+          path: ~/.elm
+          key: ${{ runner.os }}-elm-v3-${{ hashFiles('**/elm.json') }}
+          restore-keys: |
+            ${{ runner.os }}-elm-v3-
+      - uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-v2-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-v2-
+      - uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-modules-v2-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-modules-v2-
+      - uses: actions/setup-node@v3
+        with:
+          node-version-file: '.nvmrc'
 
-      - name: tags
-        run: |
-          git fetch --tags
+      # ┌┐ ┬ ┬┬┬  ┌┬┐
+      # ├┴┐│ │││   ││
+      # └─┘└─┘┴┴─┘─┴┘
+      - name: install dependencies
+        run: npm ci --prefer-offline --no-audit
+      - name: run production build
+        run: npm run build:prod
 
-      - name: version
-        id: version
-        run: |
-          echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
-
-      - name: install
-        run: |
-          go get github.com/git-chglog/git-chglog/cmd/git-chglog
-          go get github.com/github-release/github-release
-
-      - name: changelog
-        run: |
-          # https://github.com/git-chglog/git-chglog#git-chglog
-          $(go env GOPATH)/bin/git-chglog \
-            -o $GITHUB_WORKSPACE/CHANGELOG.md \
-            ${{ steps.version.outputs.VERSION }}
-
-      - name: release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          # https://github.com/github-release/github-release#how-to-use
-          $(go env GOPATH)/bin/github-release edit \
-            --user go-vela \
-            --repo ui \
-            --tag ${{ steps.version.outputs.VERSION }} \
-            --name ${{ steps.version.outputs.VERSION }} \
-            --description "$(cat $GITHUB_WORKSPACE/CHANGELOG.md)"
+      # ┌┬┐┌─┐┌─┐┬┌─┌─┐┬─┐
+      #  │││ ││  ├┴┐├┤ ├┬┘
+      # ─┴┘└─┘└─┘┴ ┴└─┘┴└─
+      - name: push to docker
+        uses: elgohr/Publish-Docker-Github-Action@master
+        with:
+          name: target/vela-ui
+          cache: true
+          tag_names: true
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
