--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,6 +4,11 @@ server {
     root /usr/share/nginx/html;
     server_name vela;
 
+    # hide version number from 'Server' header for security purposes
+    #
+    # http://nginx.org/en/docs/http/ngx_http_core_module.html#server_tokens
+    server_tokens off;
+
     # add security headers
     add_header X-Frame-Options "DENY" always;
     add_header X-Content-Type-Options "nosniff" always;
