--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "lint:css": "stylelint --cache --cache-location 'node_modules/' 'src/scss/**/*.scss'",
     "lint:css-fix": "npm run lint:css -- --fix",
     "lint:elm": "elm-format --validate src/ tests/",
+    "lint:elm-fix": "elm-format --yes src/ tests/",
     "lint:fix": "npm run lint:css-fix && npm run lint:prettier-fix",
     "lint": "npm run lint:css && npm run lint:prettier"
   },
