--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "node": ">=18.12.0"
   },
   "dependencies": {
-    "clipboard": "2.0.11",
-    "elm-format": "^0.8.7",
-    "elm-test": "^0.19.1-revision12"
+    "clipboard": "2.0.11"
   },
   "devDependencies": {
     "@double-great/stylelint-a11y": "2.0.2",
@@ -20,6 +18,8 @@
     "cypress": "5.6.0",
     "cypress-axe": "0.14.0",
     "elm": "0.19.1-5",
+    "elm-format": "^0.8.7",
+    "elm-test": "^0.19.1-revision12",
     "make-dir-cli": "3.0.0",
     "ncp": "2.0.0",
     "parcel": "2.8.3",
