address PR feedback

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "cypress": "5.6.0",
     "cypress-axe": "0.14.0",
     "elm": "0.19.1-5",
-    "elm-format": "^0.8.7",
-    "elm-test": "^0.19.1-revision12",
+    "elm-format": "0.8.7",
+    "elm-test": "0.19.1-revision12",
     "make-dir-cli": "3.0.0",
     "ncp": "2.0.0",
     "parcel": "2.8.3",
