--- a/package.json
+++ b/package.json
@@ -14,19 +14,34 @@
     "@fullhuman/postcss-purgecss": "5.0.0",
     "@parcel/transformer-elm": "2.8.3",
     "@parcel/transformer-sass": "2.8.3",
+    "assert": "^2.0.0",
     "axe-core": "4.7.2",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^5.7.1",
+    "constants-browserify": "^1.0.0",
+    "crypto-browserify": "^3.12.0",
     "cypress": "5.6.0",
     "cypress-axe": "0.14.0",
     "elm": "0.19.1-5",
     "elm-format": "0.8.7",
     "elm-test": "0.19.1-revision12",
+    "events": "^3.3.0",
+    "https-browserify": "^1.0.0",
     "make-dir-cli": "3.0.0",
     "ncp": "2.0.0",
+    "os-browserify": "^0.3.0",
     "parcel": "2.8.3",
+    "path-browserify": "^1.0.1",
     "postcss": "8.4.24",
     "prettier": "2.8.8",
+    "process": "^0.11.10",
+    "punycode": "^1.4.1",
+    "querystring-es3": "^0.2.1",
     "rimraf": "5.0.1",
     "start-server-and-test": "2.0.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "string_decoder": "^1.3.0",
     "stylelint": "15.8.0",
     "stylelint-color-format": "1.1.0",
     "stylelint-config-recommended-scss": "12.0.0",
@@ -34,7 +49,9 @@
     "stylelint-declaration-strict-value": "1.9.2",
     "stylelint-high-performance-animation": "1.8.0",
     "stylelint-order": "6.0.3",
-    "stylelint-scss": "5.0.1"
+    "stylelint-scss": "5.0.1",
+    "tty-browserify": "^0.0.1",
+    "util": "^0.12.5"
   },
   "scripts": {
     "predev": "npm run clean",
@@ -50,7 +67,7 @@
     "copy:static": "make-dir ./dist && ncp ./src/static/images ./dist/images",
     "test": "elm-test",
     "test:watch": "elm-test --watch",
-    "test:cy": "VELA_LOG_BYTES_LIMIT=1000 start-test 8888 cypress",
+    "test:cy": "VELA_LOG_BYTES_LIMIT=1000  VELA_SCHEDULE_ALLOWLIST=* start-test 8888 cypress",
     "test:cy-open": "VELA_LOG_BYTES_LIMIT=1000 start-test 8888 cypress:open",
     "cypress": "cypress run",
     "cypress:open": "cypress open",
