wip: hpcc-js/wasm:1.12.7 and web workers

--- a/nginx/local.conf
+++ b/nginx/local.conf
@@ -9,7 +9,7 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "no-referrer-when-downgrade" always;
-    add_header Content-Security-Policy "default-src 'none'; script-src 'self' 'unsafe-eval'; connect-src 'self' http://localhost:8080; img-src 'self' http://localhost:8080; style-src 'self' 'unsafe-inline'; frame-ancestors 'none'; form-action 'self'" always;
+    add_header Content-Security-Policy "default-src 'none'; script-src 'self' 'wasm-unsafe-eval'; connect-src 'self' http://localhost:8080; img-src 'self' http://localhost:8080; style-src 'self'; frame-ancestors 'none'; form-action 'self'" always;
 
     # serve up health endpoint
     location /health {
