chore: remove unused code

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,21 +7,21 @@ services:
   # interface for triggering actions in the Vela system.
   #
   # https://go-vela.github.io/docs/concepts/infrastructure/ui/
-  ui:
-    build:
-      context: .
-      dockerfile: Dockerfile.local
-    container_name: ui
-    image: ui:local
-    networks:
-      - vela
-    env_file:
-      - .env
-    restart: always
-    ports:
-      - '8888:80'
-    depends_on:
-      - server
+  # ui:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile.local
+  #   container_name: ui
+  #   image: ui:local
+  #   networks:
+  #     - vela
+  #   env_file:
+  #     - .env
+  #   restart: always
+  #   ports:
+  #     - '8888:80'
+  #   depends_on:
+  #     - server
 
   # The `server` compose service hosts the Vela server and API.
   #
@@ -46,6 +46,8 @@ services:
       DATABASE_ENCRYPTION_KEY: 'C639A572E14D5075C526FDDD43E4ECF6'
       QUEUE_DRIVER: redis
       QUEUE_ADDR: 'redis://redis:6379'
+      QUEUE_PRIVATE_KEY: 'tCIevHOBq6DdN5SSBtteXUusjjd0fOqzk2eyi0DMq04NewmShNKQeUbbp3vkvIckb4pCxc+vxUo+mYf/vzOaSg=='
+      QUEUE_PUBLIC_KEY: 'DXsJkoTSkHlG26d75LyHJG+KQsXPr8VKPpmH/78zmko='
       SCM_DRIVER: github
       SCM_CONTEXT: 'continuous-integration/vela'
       SECRET_VAULT: 'true'
