--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "node": ">=18.12.0"
   },
   "dependencies": {
-    "clipboard": "2.0.11"
+    "clipboard": "2.0.11",
+    "@hpcc-js/wasm": "^2.13.0",
+    "d3": "^7.8.5"
   },
   "devDependencies": {
     "@double-great/stylelint-a11y": "2.0.2",
