--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,21 +9,21 @@ services:
   # interface for triggering actions in the Vela system.
   #
   # https://go-vela.github.io/docs/administration/ui/
-  # ui:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile.local
-  #   container_name: ui
-  #   image: ui:local
-  #   networks:
-  #     - vela
-  #   env_file:
-  #     - .env
-  #   restart: always
-  #   ports:
-  #     - '8888:80'
-  #   depends_on:
-  #     - server
+  ui:
+    build:
+      context: .
+      dockerfile: Dockerfile.local
+    container_name: ui
+    image: ui:local
+    networks:
+      - vela
+    env_file:
+      - .env
+    restart: always
+    ports:
+      - '8888:80'
+    depends_on:
+      - server
 
   # The `server` compose service hosts the Vela server and API.
   #
