--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,10 @@ services:
   # https://go-vela.github.io/docs/administration/server/
   server:
     container_name: server
-    image: target/vela-server:latest
+    # image: target/vela-server:latest
+    build:
+      context: ../server
+      dockerfile: Dockerfile.local
     networks:
       - vela
     environment:
@@ -81,7 +84,10 @@ services:
   # https://go-vela.github.io/docs/administration/worker/
   worker:
     container_name: worker
-    image: target/vela-worker:latest
+    # image: target/vela-worker:latest
+    build:
+      context: ../worker
+      dockerfile: Dockerfile.local
     networks:
       - vela
     environment:
