fix: allow starlark limit to be customized (#814)

--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,11 @@ VELA_API=http://localhost:8080
 # default: 30
 # VELA_MAX_BUILD_LIMIT=
 
+# customize the max number of starlark exec steps that the UI will allow an admin to configure
+#
+# default: 99999
+# VELA_MAX_STARLARK_EXEC_LIMIT=
+
 # customize the set of repos that are allowed to use schedules
 #
 # default: *
