--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": ">=18.12.0"
   },
   "dependencies": {
-    "@hpcc-js/wasm": "^2.13.0",
+    "@hpcc-js/wasm-graphviz": "^1.3.0",
     "clipboard": "2.0.11",
     "d3": "^7.8.5"
   },
