--- a/cypress/fixtures/settings.json
+++ b/cypress/fixtures/settings.json
@@ -11,6 +11,7 @@
   "repo_allowlist": ["octocat/hello-world"],
   "schedule_allowlist": ["*"],
   "max_dashboard_repos": 10,
+  "queue_restart_limit": 30,
   "created_at": 1572980375,
   "updated_at": 1572980675,
   "updated_by": "octocat"
