cypress tests for route tooltip and fixtures update

--- a/cypress/fixtures/build_approved.json
+++ b/cypress/fixtures/build_approved.json
@@ -22,6 +22,7 @@
   "ref": "refs/pull/42/head",
   "base_ref": "main",
   "host": "",
+  "route": "",
   "runtime": "docker",
   "distribution": "linux",
   "approved_by": "gh0st",
