don't check yml

--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "cypress": "cypress run",
     "cypress:open": "cypress open",
     "clean": "rimraf ./.parcel-cache ./.cache ./dist",
-    "lint:prettier": "prettier --check '**/*.{js,json,ts,yml,scss,html}'",
+    "lint:prettier": "prettier --check '**/*.{js,json,ts,scss,html}' --ignore-path .github/",
     "lint:prettier-fix": "npm run lint:prettier -- --write",
     "lint:css": "stylelint --cache --cache-location 'node_modules/' 'src/scss/**/*.scss'",
     "lint:css-fix": "npm run lint:css -- --fix",
